--- a/app/resources/word_generation_renovation.html
+++ b/app/resources/word_generation_renovation.html
@@ -1,7 +1,7 @@
 <!--[main]-->
 <div class="iquedev-container-inside">
     <div class="iquedev-element iquedev-display" style="color:{{color}};">{{msg}}</div>
-    <a class="btn btn-info iquedev-element" style="color:white;font-size:10pt" href="http://www.google.com" target="newwindow">
+    <a class="btn btn-success iquedev-element" style="color:white;font-size:10pt" href="https://go.hotmart.com/V51571436F" target="newwindow">
     <i class='fas fa-external-link-alt white'>
     </i>
     Clique aqui para renovar seu plano
